# Cosmo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  app.py  cli.py  currency_converter.py  database.py  docker-compose.yml  merchant_mapper.py  pyproject.toml  reset_for_testing.py  wsgi.py
.github/workflows/: ci.yml
api/: revolut_importer.py
cosmo/: __init__.py  config.py  db.py  legacy_adapter.py
cosmo/analytics/: __init__.py  insights.py
cosmo/categorize/: __init__.py  learner.py  matcher.py  normalize.py
cosmo/fx/: __init__.py  format.py  service.py
cosmo/importers/: __init__.py  base.py  (+4 more)
data/: merchant_category_expenses.json
docs/: PLAN.md
requirements/: base.txt  dev.txt  test.txt
scripts/: seed_demo.py
static/: base.css  budgets.css  dashboard.css  expenses.css  graphs.css  income.css  reports.css
templates/: _layout.html  accounts.html  budgets.html  dashboard.html  expenses.html  graphs_stats.html  income.html  login.html  reports.html  revolut_import.html  rules.html  signup.html  transfer.html
tests/: conftest.py  test_accounts_page.py  test_analytics_insights.py  test_budgets.py  test_categorize.py  test_currency_converter.py  test_dashboard.py  test_database.py  test_edge_cases.py  test_expenses.py  test_fx_service.py  test_graphs_stats.py  test_helper_functions.py  test_importers.py  test_income.py  test_merchant_mapper.py  test_reports.py  test_repos.py  test_revolut_importer.py  test_routes.py  test_rules_page.py  test_transfers.py  test_user_authentication.py  test_wise_n26_importers.py
(+23 files in other folders)
